* Changed player rating list to have a more modern look * Added a background colour change when clicking a list item to give better feedback * Added a launch icon * Removed keyboard popup after capturing a game result (admin only) * Fixed the disappearing buttons on the game result confirm/undo screen after changing orientation (admin only)

--- a/za.co.sagoclubs.CaptureResults/res/values/strings.xml
+++ b/za.co.sagoclubs.CaptureResults/res/values/strings.xml
@@ -31,7 +31,9 @@
     <string name="player">Player</string>  
     <string name="select_player">Select Player</string>  
     <string name="display_log_file">Display Log File</string>  
-    <string name="player_ratings">Player Ratings</string>  
+    <string name="player_ratings">Player Ratings</string>
+    <string name="sort_by_name">Name</string>
+    <string name="sort_by_rank">Rank</string>
     
     <string-array name="weightlist">  
         <item>Free (0)</item>  
